# SFML-Project

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Entity/Player/: Player.cpp  Player.h
src/Entity/Ships/: Ship.cpp  Ship.h
src/Game/: GameUI.cpp  GameUI.h
src/Game/Handlers/: Animation.cpp  Animation.h
src/Game/Menu/: Menu.cpp  Menu.h
src/Game/Menu/Trigger/: TriggerEvents.cpp  TriggerEvents.h
src/Manager/: AnimationManager.cpp  AnimationManager.h  GameManager.cpp  GameManager.h  MenuManager.cpp  MenuManager.h  SpriteManager.cpp  SpriteManager.h
src/Shared/: SharedDefines.h
